fixed components not inheriting colors when switching light dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,10 @@ body {
   box-sizing: border-box;
 }
 
+th, td, svg {
+  color: inherit !important;
+}
+
 .main {
   margin-top: 1.3rem;
   min-height: 80vh;
